--- a/101.css
+++ b/101.css
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+<style>
 /* Any Element With Class Title */
 .title {
 }
@@ -13,3 +18,12 @@ div {
 /* Element selector by h2 */
 h2 {
 } 
+</style>
+</head>
+<body>
+<div>Class Title</div>
+<div>Id Selector</div>
+<div>Element Selector by div</div>
+<div>Element Selector by h2</div>
+</body>
+</html>
