--- a/102.css
+++ b/102.css
@@ -1,12 +1,18 @@
+<!DOCTYPE html>
+<html>
 <!-- External Css Style -->
 <link rel="stylesheet" href="css/file.css" />
 
 <!-- Internal Css Style -->
+<head>
 <style>
 p {
   color: red;
 }
 </style>
-
+</head>
+<body>
 <!-- Inline Css Style -->
 <p style="color: blue;">This Is Our Paragraph</p>
+</body>
+</html>
