--- a/103.css
+++ b/103.css
@@ -1,2 +1,13 @@
-<!-- Write Path -->
+<!DOCTYPE html>
+<html>
+
 <link rel="stylesheet" href="{assets/css/master.css }" />
+<head>
+<style>
+
+</style>
+</head>
+<body>
+ assets/css/master.css 
+</body>
+</html>
