--- a/106.css
+++ b/106.css
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+   
+<style>
 /* bad */
 .USERNAME {
 }
@@ -17,3 +23,16 @@
 /* bad */
 .usernameprofile {
 }
+
+</style>
+</head>
+<body>
+ <div>bad</div>
+  <div>bad</div>
+ <div>good</div>
+ <div>bad</div>
+ <div>bad</div>
+
+</body>
+
+</html>
