--- a/301.css
+++ b/301.css
@@ -1,29 +1,60 @@
-<div class="assign-2-shape-1">
+<!DOCTYPE html>
+<html>
 
-  background-color: #DDD;
-  padding: 20%
-  margin: auto;
-  border-color: red;
-  border-style: solid;
-  border: 5px solid red;
+<head>
+   
+<style>
+.div {
+    width: 800px;
+}
+.assignment1 {
+    background-color: #eee;
+    margin: 10px;
+    display: inline-block;
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    row-gap: 10px;
+    border: 5px solid red;
+    outline: 5px solid;
+    font-family:arial,helvetica,sans-serif;
+    font-size: 30px;
+    line-height: 100px;
+}
+.assignment2 {
+    background-color: #eee;
+    display: inline-block;
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    border: 5px solid green  ;
+    outline: 5px solid;
+    font-family:arial,helvetica,sans-serif;
+    font-size: 30px;
+    line-height: 100px;
+}
+.assignment3 {
+    background-color: #eee;
+    display: inline-block;
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    border: 5px dashed yellow;
+    outline: 5px solid;
+    font-family:arial,helvetica,sans-serif;
+    font-size: 30px;
+    line-height: 100px;
+}
 
-<div class="assign-2-shape-2">
 
-  background-color: #DDD;
-  padding:20%
-  margin: auto;
-  border-color: blue green;
-  border-style: solid;
-  border: 5px solid blue green;
+</style>
+</head>
+<body>
+    
+<div class="assignment1">shape1</div>
+<div class="assignment2">shape2</div>
+<div class="assignment3">shape3</div>
 
-</div>
-<div class="assign-2-shape-3">
+</body>
 
-  background-color: #DDD;
-  padding:20%
-  margin: auto;
-  border-color: red green blue yellow;
-  border-style: dashed;
-  border: 5px dashed red green blue green;
-
-</div>
+</html>
