--- a/302.css
+++ b/302.css
@@ -1,30 +1,55 @@
-<div class="first">
-padding: 400px ;
-div {
-  background-color: grey;
-  margin: 10px 0;
-}
-.first {
-  visibility: visable;
-}
-</div>
-<div class="second">
-padding: 400px ;
-div {
-  background-color: grey;
-  margin: 10px 0;
-}
-.first {
-  visibility: hidden;
-}
-</div>
-<div class="third">
-padding: 400px ;
-div {
-  background-color: grey;
-  margin: 10px 0;
-}
-.first {
-  visibility: visable;
-}
-</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+   
+<style>
+ .first {
+     width: 400px;
+     margin: 50px;
+     height: 80px;
+     background-color: #eee;
+     text-align: left;
+     line-height: 80px;
+     font-family: arial,helvetica,sans-serif;
+     font-size: 25px;
+     font-weight: normal;
+     border-left: 10px solid deeppink;
+     
+ }
+ .second {
+     width: 400px;
+     margin: 50px;
+     height: 80px;
+     background-color: #eee;
+     text-align: left;
+     line-height: 80px;
+     font-family: arial,helvetica,sans-serif;
+     font-size: 25px;
+     font-weight: normal;
+     visibility: hidden;
+ }
+  .third {
+      width: 400px;
+     margin: 50px;
+     height: 80px;
+     background-color: #eee;
+     text-align: left;
+     line-height: 80px;
+     font-family: arial,helvetica,sans-serif;
+     font-size: 25px;
+     font-weight: normal;
+      border-left: 10px solid lightseagreen;
+  }
+</style>
+</head>
+<body>
+    <div class="first">This Is Important Note</div>
+    <div class="second">This Is Important Note</div>
+    <div class="third">This Is Important Note</div>
+
+
+</body>
+
+</html>
+
