--- a/504.css
+++ b/504.css
@@ -1,7 +1,29 @@
-<a href="https://elzero.org">elzero</a>
-.a {
+<!DOCTYPE html>
+<html>
+
+<head>
+   
+<style>
+a {
 color: white;
-background-color:#00ced1;
+padding:100px;
+margin:300px;
+width:200px;
+
+background-color:lightseagreen;
 text-align: center;
-border-bottom: solid teal;
+font-size:70px;
+font-family:arial,helvetica,sans-serif;
+font-weight:600px;
+text-transform: capitalize;
+line-height:150px;
+border-bottom:30px solid teal;
 }
+
+</style>
+</head>
+<body>
+<a href="https://elzero.org">elzero</a>
+</body>
+
+</html>
