--- a/601.css
+++ b/601.css
@@ -1,14 +1,30 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+<style>
+div {
+    background-color:white;
+    width:600px;
+    margin:60px;
+    padding:30px;
+    text-align:center;
+    font-weight:normal;
+    font-size:30px;
+    font-family:arial,helvetica,sans-serif;
+    border:5px solid chocolate;
+}
+p {
+    background-color:#eee;
+  border:5px solid chocolate;
+}
+
+</style>
+</head>
+<body>
 <div>
   <p>This Is Paragraph</p>
 </div>
-div { 
-text-align: center;
-background-color: grey;
-border: 2px solid orange;
-padding: 10px;
-}
-div.p {
-border: 2px solid;
-border-color: inherit;
-padding: inherit;
-}
+
+</body>
+</html>
