--- a/602.css
+++ b/602.css
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-   <meta charset="UTF-8" />
-    <title>CSS</title>
+<html>
+
+<head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@800&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@800&family=Jomhuria&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;800&family=Jomhuria&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;800&family=Jomhuria&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+
+<style>
+
+ .first {
+font-family: "Open Sans", sans-serif;
+font-size:40px;
+text-align:center;
+font-weight:500;
+}
+ .second {
+     font-family: 'Cairo', sans-serif;
+     font-size:40px;
+     text-align:center;
+     font-weight:500;
+ }
+ .third {
+     font-family: 'Jomhuria', cursive;
+     font-size:40px;
+     text-align:center;
+     font-weight:500;
+ }
+
+</style>
+</head>
 <body>
-<div class="1">Elzero Web School</div>
-<div class="2">Elzero Web School</div>
-<div class="3">Elzero Web School</div>
+<div class="first">Elzero Web School</div>
+<div class="second">Elzero Web School</div>
+<div class="third">Elzero Web School</div>
+
 </body>
-.1 {
-font-family: 'Open Sans', sans-serif;
-}
-.2 {
-font-family: 'Cairo', sans-serif;
-font-family: 'Open Sans', sans-serif;
-}
-.3 {
-font-family: 'Cairo', sans-serif;
-font-family: 'Jomhuria', cursive;
-font-family: 'Open Sans', sans-serif;
-}
-1;
-2;
-3 {
-color: black;
-background-color:white;
-}
+</html>
